# maz

./: .gitignore  README.md  maz_colab.ipynb  maz_kaggle.ipynb  pyproject.toml
maz/: benchmark.py  checkpoint.py  game.py  logger.py  main.py  mcts.py  network.py  play.py  selfplay.py  train.py
